# cpp

./: .gitignore
week1/task2/: a.out  main.cpp
week1/task3/: a.out  main.cpp
week1/task4/: main.cpp
week1/task5/: a.out  main.cpp
week1/task6/: a.out  main.cpp
week1/task7/: main.cpp
week1/task8/: a.out  main.cpp
week1/task9/: a.out  main.cpp
week10/: CMakeLists.txt  condition_parser.cpp  condition_parser_test.cpp  database.cpp  database.h  database_test.cpp  date.cpp  date.h  main.cpp  node.cpp  node.h  test_runner.h  token.h
week11/: CMakeLists.txt
week11/task1/: max_element_if.cpp
week11/task2/: log.cpp
week11/task3/: airline_ticket.h  sort_by.cpp
week11/task4/: airline_ticket.h  update_field.cpp
week11/task5/: bad_macro.cpp
week11/task6/: uniq_id.cpp
week11/task7/: table.cpp
week11/task8/: deque.cpp
week11/task9/: CMakeLists.txt  paginator.cpp
week12/task1/: sort_student.cpp
week12/task2/: learner.cpp
week12/task3/: CMakeLists.txt  slow.cpp
week12/task4/: CMakeLists.txt  slow.cpp
week12/task5/: CMakeLists.txt  main.cpp
week13/task1/: CMakeLists.txt  main.cpp
week13/task2/: CMakeLists.txt  swap.cpp
week13/task3/: CMakeLists.txt  main.cpp  simple_vector.cpp  simple_vector.h
week13/task4/: CMakeLists.txt  linked_list.cpp  stack_vector.h
week13/task5/: CMakeLists.txt  translator.cpp
week2/task1/: main.cpp
week2/task10/: main.cpp
week2/task11/: main.cpp
week2/task12/: main.cpp
week2/task13/: main.cpp
week2/task14/: main.cpp
week2/task15/: main.cpp
week2/task16/: main.cpp
week2/task17/: main.cpp
(+74 files in other folders)
